# tracekit

./: .cursorrules  .editorconfig  .gitignore  .pre-commit-config.yaml  AUTHORS  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  LICENSE-MIT  MAINTAINERS  OWNERS  README.md  SECURITY.md  SUMMARY.md  TRACE_FORMATS_CHANGELOG.md  rust-toolchain.toml  rustfmt.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/workflows/: README.md  benchmarks.yml  ci.yml  jekyll-gh-pages.yml  maintenance.yml  release.yml
benches/: bench.rs
docs/: REAL_TRACES.md  _config.yml  index.md
examples/: hello.rs
tracekit/: Cargo.toml
tracekit-cachekit/: Cargo.toml
tracekit-cachekit/src/: lib.rs
tracekit-cli/: Cargo.toml
tracekit-cli/src/: charts_template.html  cmd_render.rs  cmd_rewrite.rs  cmd_simulate.rs  cmd_tracegen.rs  main.rs
tracekit-formats/: Cargo.toml  README.md
tracekit-formats/src/: arc.rs  cachelib.rs  csv.rs  jsonl.rs  key_only.rs  lib.rs  lirs.rs
tracekit/examples/: real_trace.rs
tracekit/src/: event.rs  json_results.rs  lib.rs  metrics.rs  model.rs  registry.rs  simulator.rs  source.rs  workload.rs
