[workspace]
members = ["tracekit", "tracekit-formats", "tracekit-cachekit", "tracekit-cli"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
authors = ["Thomas Korrison <ferrite.db@gmail.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/OxidizeLabs/tracekit"

[workspace.dependencies]
# Internal crates
tracekit = { path = "tracekit", version = "0.1.0" }
tracekit-formats = { path = "tracekit-formats", version = "0.1.0" }
tracekit-cachekit = { path = "tracekit-cachekit", version = "0.1.0" }

# External dependencies
clap = { version = "4", features = ["derive"] }
criterion = "0.5"
rand = { version = "0.9", features = ["small_rng"] }
rand_distr = "0.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"

# Development profile - optimized for fast compilation and good debugging
[profile.dev]
opt-level = 0
debug = true
debug-assertions = true
overflow-checks = true
lto = false
panic = "unwind"
incremental = true
codegen-units = 256

# Test profile - balanced for test execution speed vs debugging
[profile.test]
opt-level = 1
debug = true
debug-assertions = true
overflow-checks = true
lto = false
incremental = true
codegen-units = 256

# Release profile - maximum performance for production
[profile.release]
opt-level = 3
debug = false
debug-assertions = false
overflow-checks = false
lto = "fat"
panic = "abort"
codegen-units = 1
strip = true

# Benchmark profile - optimized for consistent performance measurement
[profile.bench]
opt-level = 3
debug = false
debug-assertions = false
overflow-checks = false
lto = "thin"
codegen-units = 1
strip = true
