[package]
name = "tracekit-formats"
description = "Trace file format parsers and writers for tracekit."
readme = "../README.md"
keywords = ["cache", "trace", "parser", "format"]
categories = ["parsing", "encoding"]
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
targets = ["x86_64-unknown-linux-gnu"]

[features]
default = []
jsonl = ["serde", "serde_json"]
compression = ["flate2"]
full = ["jsonl", "compression"]

[dependencies]
tracekit = { workspace = true }
serde = { workspace = true, optional = true }
serde_json = { workspace = true, optional = true }
flate2 = { version = "1.0", optional = true }
