[package]
name = "tracekit"
description = "Cache trace simulation toolkit with workload generators and metrics collection."
readme = "../README.md"
keywords = ["cache", "trace", "simulation", "benchmark", "workload"]
categories = ["development-tools", "simulation"]
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
rand = { workspace = true }
rand_distr = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }

[[bench]]
name = "bench"
harness = false
